Added and completed most of the CSS and HTML before getting started on Javascript. Added new images for the background and other icons as svg again.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <script src="script.js"></script>
+    <div class="header">
+        <h1>Rock Paper Scissors</h1>
+        <p>first to 5 wins!</p>
+
+    </div>
+
+    <div class="game-panel">
+        <div class="player-moves">
+            <button class="select-move"><img src="img/fist.svg"></button>
+            <button class="select-move"><img src="img/scissors.svg"></button>
+            <button class="select-move"><img src="img/paper.svg"></button>
+        </div>
+        <div class="middle-section">
+            <div class="versus">
+                <img src="img/versus.svg">
+            </div>
+            <div class="scoreboard">
+                <h1>Player - <span style="color: #FF717E">Computer</span></h1>
+                <h1>00 - <span style="color: #FF717E">00</span></h1>
+            </div>
+        </div>
+        <div class="computer-move">
+            <img src="img/mystery.svg">
+        </div>
+
+    </div>
 </body>
 </html>
